# video_game_sales

./: .gitignore  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
notebooks/: 01_data_overview.ipynb  02_data_cleaning.ipynb  03_eda.ipynb  04_analysis.ipynb
src/analysis/: market_analysis.py
src/cleaning/: clean_sales_data.py
src/features/: feature_engineering.py
src/ingestion/: load_dataset.py
src/validation/: schema.py
tests/: test_analysis.py  test_cleaning.py  test_features.py  test_ingestion.py  test_validation.py
visualization/: __init__.py  charts.py  dashboard.py
