[project]
name = "video-game-sales"
version = "0.1.0"
description = "Historical video game sales analysis — EDA and data pipeline portfolio project."
readme = "README.md"
requires-python = ">=3.14.3"
dependencies = [
    # Data Processing
    "pandas>=2.2",
    "numpy>=2.0",
    "pyarrow>=16.0",
    # Data Visualization
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "plotly>=5.22",
    # Data Validation
    "pandera>=0.20",
    # Notebook / Exploration
    "jupyterlab>=4.2",
    "ipykernel>=6.29",
]

[project.optional-dependencies]
advanced = [
    # Optional advanced analysis
    "scikit-learn>=1.5",
    "statsmodels>=0.14",
    "streamlit>=1.36",
]

[dependency-groups]
dev = [
    # Testing
    "pytest>=8.2",
    "pytest-cov>=5.0",
    # Code Quality
    "ruff>=0.4",
    "black>=24.4",
    "pyright>=1.1",
]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.black]
line-length = 88
target-version = ["py314"]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
